--- a/tests/Transport.BDD/Transport.BDD.csproj
+++ b/tests/Transport.BDD/Transport.BDD.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="SpecFlow.Plus.LivingDocPlugin" Version="3.9.57" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../../src/App.Core/App.Core.csproj" />
+    <ProjectReference Include="../../src/Transport.Core/Transport.Core.csproj" />
   </ItemGroup>
 </Project>
+
