--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
             --logger "trx;LogFileName=unit-tests.trx" \
             /p:CollectCoverage=true \
             /p:CoverletOutput=TestResults/coverage/ \
-            /p:CoverletOutputFormat="cobertura,lcov" \
+            /p:CoverletOutputFormat=cobertura \
             /p:Threshold=80 \
             /p:ThresholdType=line \
             /p:Include="[Transport.Core]*"
@@ -88,4 +88,3 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
